// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPresentation classic theme applies custom styling 1`] = `
.c0 {
  -webkit-flex: 0 0 %;
  -ms-flex: 0 0 %;
  flex: 0 0 %;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #fff;
  border: 1px solid #668592;
  box-sizing: border-box;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  min-height: 40px;
  padding-left: 11px;
  padding-right: 11px;
  border-color: #ccd6db;
  box-shadow: none;
  min-height: 31px;
  padding-left: 6px;
  padding-right: 6px;
}

.c1 .c2:-webkit-autofill {
  margin-top: 2px;
}

.c1 .c2 {
  height: 27px;
}

.c1:hover {
  border-color: #99adb6;
  z-index: 2;
}

.c1:hover .c3 {
  background-color: #255bc7;
  border-color: #255bc7;
  color: #fff;
}

.c1:hover .c3:hover {
  background-color: #1e499f;
  border-color: #1e499f;
}

.c1 input::-ms-clear {
  display: none;
}

.c1 input::-webkit-contacts-auto-fill-button {
  display: none !important;
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="presentation"
    size="medium"
  >
    sample children
  </div>
</div>
`;

exports[`InputPresentation renders presentational div and context provider for its children 1`] = `
.c0 {
  -webkit-flex: 0 0 %;
  -ms-flex: 0 0 %;
  flex: 0 0 %;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background: #fff;
  border: 1px solid #668592;
  box-sizing: border-box;
  cursor: text;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  min-height: 40px;
  padding-left: 11px;
  padding-right: 11px;
}

.c1 .c2:-webkit-autofill {
  margin-top: 2px;
}

.c1 input::-ms-clear {
  display: none;
}

.c1 input::-webkit-contacts-auto-fill-button {
  display: none !important;
}

<div
  className="c0"
>
  <div
    className="c1"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="presentation"
    size="medium"
  >
    sample children
  </div>
</div>
`;
